--- a/jdMobile/index.html
+++ b/jdMobile/index.html
@@ -50,6 +50,13 @@
           <li><a href="javascript:;"><img src="./image/nav_8.png" alt=""><br><span>我的关注</span></a></li>
         </ul>
       </div>
+      <!-- 会场 -->
+      <!-- 热卖 -->
+      <!-- 超时 -->
+      <!-- 主题 -->
+      <!-- 品牌 -->
+      <!-- 猜你喜欢 -->
+      <!-- 底部 -->
     </main>
     <!-- 工具栏 -->
     <aside class="toolbar">
