--- a/jdMobile/index.html
+++ b/jdMobile/index.html
@@ -303,6 +303,7 @@
           <ul>
             <li><a href="javascript:;" class="pc-icon">客户端</a></li>
             <li><a href="javascript:;" class="pc-icon">触屏版</a></li>
+            <li><a href="javascript:;" class="pc-icon">电脑版</a></li>
           </ul>
         </div>
         <p>Copyright © 2004-2016 京东JD.com 版权所有</p>
